# ag2

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  MAINTAINERS.md  README.md  _typos.toml  index.html  justfile  pyproject.toml  setup_autogen.py  versions.json
.devcontainer/: devcontainer.json  setup.sh
.devcontainer/python-3.11/: devcontainer.json
.devcontainer/python-3.12/: devcontainer.json
.devcontainer/python-3.13/: devcontainer.json
.devcontainer/python-3.14/: devcontainer.json
.github/: AI_POLICY.md  SECURITY.md  dependabot.yml  zizmor.yml
.github/workflows/: beta-llm-test.yml  beta-test.yml  build-mkdocs.yml  claude-code-review.yml  claude.yml  contrib-graph-rag-tests.yml  contrib-llm-test.yml  contrib-test.yml  core-llm-test.yml  core-test.yml  deploy-website.yml  integration-test.yml  lfs-check.yml  mkdocs-check-broken-links.yml  pr-checks.yml  python-package.yml  test-with-optional-deps.yml  type-check.yml  zizmor.yml
0.11.5/: objects.inv  sitemap.xml
autogen/: __init__.py  browser_utils.py  version.py
autogen/a2a/: client.py
autogen/agentchat/: __init__.py  conversable_agent.py  eligibility_policy.py  groupchat.py
autogen/beta/: __init__.py  agent.py  annotations.py  context.py  conversable.py  example_LSTMS.py  example_ag2_memory_agent.py  exceptions.py  history.py  hitl.py  long_short_term_memory_storage.py  observer.py  plugin.py  stream.py  testing.py  textual.py  types.py  utils.py
autogen/cache/: cache_factory.py  disk_cache.py
autogen/coding/: __init__.py  base.py  daytona_code_executor.py  factory.py
autogen/events/: base_event.py
autogen/interop/: interoperability.py
autogen/llm_clients/: MIGRATION_TO_V2.md
autogen/oai/: bedrock.py  client.py  gemini.py  gemini_types.py  openai_utils.py
cli/: README.md  pyproject.toml
cli/docs/: arena.md  create.md  install.md  langgraph-mapping.md  proxy.md  publish.md  replay.md  run.md  serve.md  test.md
cli/src/ag2_cli/: __init__.py  app.py
cli/src/ag2_cli/commands/: __init__.py  _shared.py  arena.py  create.py  install.py  proxy.py  publish.py  replay.py  run.py  serve.py  test.py
cli/src/ag2_cli/content/skills/: manifest.json
cli/src/ag2_cli/content/skills/agents/: ag2-architect.md  ag2-migrator.md
cli/src/ag2_cli/content/skills/commands/: explain-flow.md  review-agent-config.md
cli/src/ag2_cli/content/skills/rules/: agent-patterns.md  code-execution.md  group-chat.md  hooks-and-replies.md  imports.md  llm-config.md  sequential-chats.md  tool-registration.md
cli/src/ag2_cli/content/skills/skills/: add-code-execution.md  add-guardrails.md  add-mcp-integration.md  add-tool.md  build-group-chat.md  build-rag-agent.md  build-reasoning-agent.md  build-research-agent.md  create-agent-team.md  debug-conversation.md
cli/src/ag2_cli/core/: __init__.py  discovery.py  runner.py
cli/src/ag2_cli/install/: __init__.py  artifact.py  client.py  lockfile.py  mcp_config.py  registry.py  resolver.py
cli/src/ag2_cli/install/installers/: __init__.py  _utils.py  agents.py  bundles.py  datasets.py  skills.py  templates.py  tools.py
cli/src/ag2_cli/install/targets/: __init__.py  base.py  claude.py  copilot.py
cli/src/ag2_cli/testing/: __init__.py  assertions.py  cases.py  results.py
cli/src/ag2_cli/ui/: __init__.py  console.py  logo.py  theme.py
cli/test_playground/: README.md  agent_coder.py  agent_concise.py  agent_detailed.py  arena_eval.yaml  eval_cases.yaml  main_agent.py  sample_api.yaml  single_agent.py  team.py  tools_generated.py
cli/test_playground/scripts/: disk_usage.sh  git_summary.sh  system_info.sh
cli/tests/: conftest.py  test_arena.py  test_artifact.py  test_bugfixes.py  test_bugfixes_v2.py  test_cli.py  test_client.py  test_create.py  test_create_artifact.py  test_create_new_features.py  test_discovery.py  test_eval.py  test_install_cmd.py  test_installers.py  test_installers_extended.py  test_lockfile.py  test_mcp_config.py  test_proxy.py  test_publish.py  test_registry.py  test_replay.py  test_resolver.py  test_run.py  test_runner.py  test_serve.py  test_targets.py  test_test_cmd.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/javascripts/: extra.js
latest/stylesheets/: extra.c53a0f.min.css
notebook/: agentchat_JSON_mode_example.ipynb  agentchat_LlamaIndex_query_engine.ipynb  agentchat_MathChat.ipynb  agentchat_RetrieveChat_mongodb.ipynb  agentchat_RetrieveChat_qdrant.ipynb  agentchat_agenteval_cq_math.ipynb  agentchat_agentoptimizer.ipynb  agentchat_autobuild_agent_library.ipynb  agentchat_autobuild_basic.ipynb  agentchat_autogen_uniformed_api_calling.ipynb  agentchat_bedrock_additional_model_request_field_example.ipynb  agentchat_captainagent.ipynb  agentchat_chromadb_query_engine.ipynb  agentchat_config_loader_utility_functions.ipynb  agentchat_dalle_and_gpt4v.ipynb  agentchat_daytona_executor.ipynb  agentchat_function_call.ipynb  agentchat_function_call_code_writing.ipynb  agentchat_function_call_currency_calculator.ipynb  agentchat_gpt_assistant_agent_function_call.ipynb  agentchat_group_chat_with_llamaindex_agents.ipynb  agentchat_groupchat_customized.ipynb  agentchat_groupchat_eligibility.ipynb  agentchat_human_feedback.ipynb  agentchat_image_generation_capability.ipynb  agentchat_langchain.ipynb  agentchat_lmm_gpt-4v.ipynb  agentchat_lmm_llava.ipynb  agentchat_memory_using_mem0.ipynb  agentchat_nested_chats_chess.ipynb  agentchat_oai_assistant_function_call.ipynb  agentchat_oai_assistant_groupchat.ipynb  agentchat_oai_assistant_retrieval.ipynb  agentchat_oai_assistant_twoagents_basic.ipynb  agentchat_oai_chatgpt_gpt4.ipynb  agentchat_oai_code_interpreter.ipynb  agentchat_oai_completion.ipynb  agentchat_realtime_gemini_swarm_websocket.ipynb  agentchat_realtime_gemini_websocket.ipynb  agentchat_realtime_swarm.ipynb  (+16 more)
scripts/: test-beta-llm.sh  test.sh
test/: conftest.py  credentials.py  marks.py  test_code_utils.py  test_conftest.py  test_logging.py
test/agentchat/: test_agent_usage.py  (+20 more)
website/: AGENTS.md  generate_api_references.py  mint-json-template.json.jinja  process_notebooks.py
(+2311 files in other folders)
